@@ -1,6 +1,6 @@
 /* Portable <sys/ptrace.h>
 
-   Copyright (C) 2004-2005, 2007-2012 Free Software Foundation, Inc.
+   Copyright (C) 2004, 2005, 2007, 2008, 2009 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -114,11 +114,7 @@
    and there is probably no special request that we would be required
    to use when resuming the execution of our program.  */
 #ifndef PT_SYSCALL
-# ifdef PTRACE_SYSCALL
-#  define PT_SYSCALL PTRACE_SYSCALL
-#else
-#  define PT_SYSCALL PT_CONTINUE
-# endif
+# define PT_SYSCALL PT_CONTINUE
 #endif
 
 /* Some systems, in particular DEC OSF/1, Digital Unix, Compaq Tru64
