@@ -1,6 +1,7 @@
 /* Low-level child interface to ttrace.
 
-   Copyright (C) 2004-2012 Free Software Foundation, Inc.
+   Copyright (C) 2004, 2005, 2006, 2007, 2008, 2009
+   Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -313,8 +314,7 @@ inf_ttrace_disable_page_protections (pid_t pid)
    type TYPE.  */
 
 static int
-inf_ttrace_insert_watchpoint (CORE_ADDR addr, int len, int type,
-			      struct expression *cond)
+inf_ttrace_insert_watchpoint (CORE_ADDR addr, int len, int type)
 {
   const int pagesize = inf_ttrace_page_dict.pagesize;
   pid_t pid = ptid_get_pid (inferior_ptid);
@@ -337,8 +337,7 @@ inf_ttrace_insert_watchpoint (CORE_ADDR addr, int len, int type,
    type TYPE.  */
 
 static int
-inf_ttrace_remove_watchpoint (CORE_ADDR addr, int len, int type,
-			      struct expression *cond)
+inf_ttrace_remove_watchpoint (CORE_ADDR addr, int len, int type)
 {
   const int pagesize = inf_ttrace_page_dict.pagesize;
   pid_t pid = ptid_get_pid (inferior_ptid);
@@ -454,15 +453,12 @@ inf_ttrace_follow_fork (struct target_ops *ops, int follow_child)
       inferior_ptid = ptid_build (fpid, flwpid, 0);
       inf = add_inferior (fpid);
       inf->attach_flag = parent_inf->attach_flag;
-      inf->pspace = parent_inf->pspace;
-      inf->aspace = parent_inf->aspace;
       copy_terminal_info (inf, parent_inf);
       detach_breakpoints (pid);
 
       target_terminal_ours ();
-      fprintf_unfiltered (gdb_stdlog,
-			  _("Attaching after fork to child process %ld.\n"),
-			  (long)fpid);
+      fprintf_unfiltered (gdb_stdlog, _("\
+Attaching after fork to child process %ld.\n"), (long)fpid);
     }
   else
     {
@@ -470,9 +466,8 @@ inf_ttrace_follow_fork (struct target_ops *ops, int follow_child)
       detach_breakpoints (fpid);
 
       target_terminal_ours ();
-      fprintf_unfiltered (gdb_stdlog,
-			  _("Detaching after fork from child process %ld.\n"),
-			  (long)fpid);
+      fprintf_unfiltered (gdb_stdlog, _("\
+Detaching after fork from child process %ld.\n"), (long)fpid);
     }
 
   if (tts.tts_event == TTEVT_VFORK)
@@ -626,6 +621,13 @@ inf_ttrace_him (struct target_ops *ops, int pid)
 
   push_target (ops);
 
+  /* On some targets, there must be some explicit synchronization
+     between the parent and child processes after the debugger forks,
+     and before the child execs the debuggee program.  This call
+     basically gives permission for the child to exec.  */
+
+  target_acknowledge_created_inferior (pid);
+
   /* START_INFERIOR_TRAPS_EXPECTED is defined in inferior.h, and will
      be 1 or 2 depending on whether we're starting without or with a
      shell.  */
@@ -649,7 +651,7 @@ inf_ttrace_create_inferior (struct target_ops *ops, char *exec_file,
   gdb_assert (inf_ttrace_vfork_ppid == -1);
 
   pid = fork_inferior (exec_file, allargs, env, inf_ttrace_me, NULL,
-		       inf_ttrace_prepare, NULL, NULL);
+		       inf_ttrace_prepare, NULL);
 
   inf_ttrace_him (ops, pid);
 }
@@ -682,62 +684,22 @@ inf_ttrace_mourn_inferior (struct target_ops *ops)
   generic_mourn_inferior ();
 }
 
-/* Assuming we just attached the debugger to a new inferior, create
-   a new thread_info structure for each thread, and add it to our
-   list of threads.  */
-
-static void
-inf_ttrace_create_threads_after_attach (int pid)
-{
-  int status;
-  ptid_t ptid;
-  ttstate_t tts;
-  struct thread_info *ti;
-
-  status = ttrace (TT_PROC_GET_FIRST_LWP_STATE, pid, 0,
-		   (uintptr_t) &tts, sizeof (ttstate_t), 0);
-  if (status < 0)
-    perror_with_name (_("TT_PROC_GET_FIRST_LWP_STATE ttrace call failed"));
-  gdb_assert (tts.tts_pid == pid);
-
-  /* Add the stopped thread.  */
-  ptid = ptid_build (pid, tts.tts_lwpid, 0);
-  ti = add_thread (ptid);
-  ti->private = xzalloc (sizeof (struct inf_ttrace_private_thread_info));
-  inf_ttrace_num_lwps++;
-
-  /* We use the "first stopped thread" as the currently active thread.  */
-  inferior_ptid = ptid;
-
-  /* Iterative over all the remaining threads.  */
-
-  for (;;)
-    {
-      ptid_t ptid;
-
-      status = ttrace (TT_PROC_GET_NEXT_LWP_STATE, pid, 0,
-		       (uintptr_t) &tts, sizeof (ttstate_t), 0);
-      if (status < 0)
-	perror_with_name (_("TT_PROC_GET_NEXT_LWP_STATE ttrace call failed"));
-      if (status == 0)
-        break;  /* End of list.  */
-
-      ptid = ptid_build (tts.tts_pid, tts.tts_lwpid, 0);
-      ti = add_thread (ptid);
-      ti->private = xzalloc (sizeof (struct inf_ttrace_private_thread_info));
-      inf_ttrace_num_lwps++;
-    }
-}
-
 static void
 inf_ttrace_attach (struct target_ops *ops, char *args, int from_tty)
 {
   char *exec_file;
   pid_t pid;
+  char *dummy;
   ttevent_t tte;
   struct inferior *inf;
 
-  pid = parse_pid_to_attach (args);
+  if (!args)
+    error_no_arg (_("process-id to attach"));
+
+  dummy = args;
+  pid = strtol (args, &dummy, 0);
+  if (pid == 0 && args == dummy)
+    error (_("Illegal process-id: %s."), args);
 
   if (pid == getpid ())		/* Trying to masturbate?  */
     error (_("I refuse to debug myself!"));
@@ -763,8 +725,7 @@ inf_ttrace_attach (struct target_ops *ops, char *args, int from_tty)
   if (ttrace (TT_PROC_ATTACH, pid, 0, TT_KILL_ON_EXIT, TT_VERSION, 0) == -1)
     perror_with_name (("ttrace"));
 
-  inf = current_inferior ();
-  inferior_appeared (inf, pid);
+  inf = add_inferior (pid);
   inf->attach_flag = 1;
 
   /* Set the initial event mask.  */
@@ -781,7 +742,11 @@ inf_ttrace_attach (struct target_ops *ops, char *args, int from_tty)
 
   push_target (ops);
 
-  inf_ttrace_create_threads_after_attach (pid);
+  /* We'll bump inf_ttrace_num_lwps up and add the private data to the
+     thread as soon as we get to inf_ttrace_wait.  At this point, we
+     don't have lwpid info yet.  */
+  inferior_ptid = pid_to_ptid (pid);
+  add_thread_silent (inferior_ptid);
 }
 
 static void
@@ -1212,8 +1177,7 @@ inf_ttrace_xfer_memory (CORE_ADDR addr, ULONGEST len,
 static LONGEST
 inf_ttrace_xfer_partial (struct target_ops *ops, enum target_object object,
 			 const char *annex, gdb_byte *readbuf,
-			 const gdb_byte *writebuf,
-			 ULONGEST offset, LONGEST len)
+			 const gdb_byte *writebuf, ULONGEST offset, LONGEST len)
 {
   switch (object)
     {
@@ -1283,15 +1247,6 @@ inf_ttrace_pid_to_str (struct target_ops *ops, ptid_t ptid)
 }
 
 
-/* Implement the get_ada_task_ptid target_ops method.  */
-
-static ptid_t
-inf_ttrace_get_ada_task_ptid (long lwp, long thread)
-{
-  return ptid_build (ptid_get_pid (inferior_ptid), lwp, 0);
-}
-
-
 struct target_ops *
 inf_ttrace_target (void)
 {
@@ -1316,7 +1271,6 @@ inf_ttrace_target (void)
   t->to_extra_thread_info = inf_ttrace_extra_thread_info;
   t->to_pid_to_str = inf_ttrace_pid_to_str;
   t->to_xfer_partial = inf_ttrace_xfer_partial;
-  t->to_get_ada_task_ptid = inf_ttrace_get_ada_task_ptid;
 
   return t;
 }
