@@ -1,3 +1,11 @@
+2009-09-17  Joel Brobecker  <brobecker@adacore.com>
+
+	Fix a build failure on pa-hpux:
+	* gdb_ptrace.h (PT_SYSCALL): Define here if not already defined.
+	* inf-ttrace.c (inf_ttrace_wait): Fix compilation failure
+	introduced after field syscall_id inside struct target_waitstatus
+	has been renamed into syscall_number.
+
 2009-09-16  Joel Brobecker  <brobecker@adacore.com>
 
 	* version.in: Set version to 6.8.91.20090916-cvs.
